Issue #2022333 by NancyDru: Add another common permission warning.
Issue #2023233 by NancyDru: Fix double encoding.
Issue #1993408 by NancyDru: Default new states to active.
Issue #1542188 by justanothermark: Fix workflow display.
Issue #2027507 by NancyDru: Fix sorting issue on history page.
Issue #1993408 by NancyDru: Sysid not always set correctly.

Since 7.x-1.2
Issue #2037459 by johnv: Fix typo.
Issue #2037531 by johnv, NancyDru: Fix choices return value.
Issue #2039859 by Scaythe: Fix double encoding.
Issue #2043667 by rodrigoeg, johnv: Fix typo in tokens.
Issue #2044199 by justanothermark: Fix Feature reversion on non-existent states.
Issue #2019345 by NancyDru: Allow hooks to reside in separate file.
Issue #2052707 by NancyDru: Fix typo in single state value.
Issue #2056773 by ambientdrup: Fix typo in VBO.
Issue #2041329 by johnv: Changed api: added workflow_get_workflows_by_type(), for shorter code.
Issue #2071663 by johnv: Changed function workflow_node_tab_access to gain performance.
Issue #2071733 by johnv: Changed determination of showing Form, with new function workflow_show_form.
Issue #2071733 by johnv: Preserve compatibility with workflow_extensions.
Issue #2041319 by johnv: Added function workflow_get_first_state(), to have more unified code.
Issue #2072059 by johnv: Changed call to hook_form_alter, by using hook_form_BASE_FORM_ID_alter, creating better performance.
Issue #2072203 by johnv: Moved all node API functions from module file to node.inc file, to facilitate introduction of field API.
Issue #2072081 by johnv: Fixed typo in workflow_node_tab_access().
Issue #2077693 by johnv: Added Field API support in workflow_field_choices().
Issue #2078785 by johnv: Added Field API support in workflow_node_tab_access().
Issue #2079017 by johnv: Added Field API support for workflow_execute_transition().
Issue #2080857 by johnv: Added Field API support for workflow_tab_page().
Issue #2080915 by NancyDru: Signal Rules on reversion.